Fixing Callout header z-index and adjustments to content background opacity

--- a/src/scss/Editor/callouts.scss
+++ b/src/scss/Editor/callouts.scss
@@ -13,6 +13,7 @@
         border-radius: var(--border-radius);
         box-shadow: var(--drop-shadow);
         border: 2px solid;
+        position: relative;
         z-index: 5;
         gap: 4px;
     }
@@ -47,9 +48,6 @@
         border-bottom-right-radius: var(--border-radius);
     }
 
-    // &[open] {
-    // }
-
     // Type 1
     &[data-callout="note"] {
 
@@ -65,7 +63,7 @@
 
         .callout-content {
             border-color: var(--color-dark-grey);
-            background-color: hsla(var(--color-grey-h), var(--color-grey-s), var(--color-grey-l), 0.1);
+            background-color: hsla(var(--color-grey-h), var(--color-grey-s), var(--color-grey-l), 0.05);
         }
     }
 
@@ -86,7 +84,7 @@
 
         .callout-content {
             border-color: var(--color-dark-aqua);
-            background-color: hsla(var(--color-aqua-h), var(--color-aqua-s), var(--color-aqua-l), 0.1);
+            background-color: hsla(var(--color-aqua-h), var(--color-aqua-s), var(--color-aqua-l), 0.05);
         }
     }
 
@@ -106,7 +104,7 @@
 
         .callout-content {
             border-color: var(--color-dark-blue);
-            background-color: hsla(var(--color-blue-h), var(--color-blue-s), var(--color-blue-l), 0.1);
+            background-color: hsla(var(--color-blue-h), var(--color-blue-s), var(--color-blue-l), 0.05);
         }
     }
 
@@ -127,7 +125,7 @@
 
         .callout-content {
             border-color: var(--color-dark-mint);
-            background-color: hsla(var(--color-mint-h), var(--color-mint-s), var(--color-mint-l), 0.1);
+            background-color: hsla(var(--color-mint-h), var(--color-mint-s), var(--color-mint-l), 0.05);
         }
     }
 
@@ -148,7 +146,7 @@
 
         .callout-content {
             border-color: var(--color-dark-green);
-            background-color: hsla(var(--color-green-h), var(--color-green-s), var(--color-green-l), 0.1);
+            background-color: hsla(var(--color-green-h), var(--color-green-s), var(--color-green-l), 0.05);
         }
     }
 
@@ -169,7 +167,7 @@
 
         .callout-content {
             border-color: var(--color-dark-yellow);
-            background-color: hsla(var(--color-yellow-h), var(--color-yellow-s), var(--color-yellow-l), 0.1);
+            background-color: hsla(var(--color-yellow-h), var(--color-yellow-s), var(--color-yellow-l), 0.05);
         }
     }
 
@@ -190,7 +188,7 @@
 
         .callout-content {
             border-color: var(--color-dark-orange);
-            background-color: hsla(var(--color-orange-h), var(--color-orange-s), var(--color-orange-l), 0.1);
+            background-color: hsla(var(--color-orange-h), var(--color-orange-s), var(--color-orange-l), 0.05);
         }
     }
 
@@ -211,7 +209,7 @@
 
         .callout-content {
             border-color: var(--color-dark-red);
-            background-color: hsla(var(--color-red-h), var(--color-red-s), var(--color-red-l), 0.1);
+            background-color: hsla(var(--color-red-h), var(--color-red-s), var(--color-red-l), 0.05);
         }
     }
 
@@ -231,7 +229,7 @@
 
         .callout-content {
             border-color: var(--color-dark-red);
-            background-color: hsla(var(--color-red-h), var(--color-red-s), var(--color-red-l), 0.1);
+            background-color: hsla(var(--color-red-h), var(--color-red-s), var(--color-red-l), 0.05);
         }
     }
 
@@ -250,7 +248,7 @@
 
         .callout-content {
             border-color: var(--color-dark-pink);
-            background-color: hsla(var(--color-pink-h), var(--color-pink-s), var(--color-pink-l), 0.1);
+            background-color: hsla(var(--color-pink-h), var(--color-pink-s), var(--color-pink-l), 0.05);
         }
     }
 
@@ -269,7 +267,7 @@
 
         .callout-content {
             border-color: var(--color-dark-purple);
-            background-color: hsla(var(--color-purple-h), var(--color-purple-s), var(--color-purple-l), 0.1);
+            background-color: hsla(var(--color-purple-h), var(--color-purple-s), var(--color-purple-l), 0.05);
         }
     }
 
@@ -289,7 +287,7 @@
 
         .callout-content {
             border-color: var(--color-dark-grey);
-            background-color: hsla(var(--color-grey-h), var(--color-grey-s), var(--color-grey-l), 0.1);
+            background-color: hsla(var(--color-grey-h), var(--color-grey-s), var(--color-grey-l), 0.05);
         }
     }
 }
